--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,9 @@
 HIPC Dashboard Pipeline
 
+Changes in version 1.2.1
+- update some signatures to clarify comparison column entries
+- update observation summary template to match change to Dashboard special character handling (left-paren, ampersand) 
+
 Changes in version 1.2.0
 - Update column headers:
 -- baseline_time to baseline_time_event
