--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,15 @@
 HIPC Dashboard Pipeline
 
+Changes in version 1.3.1
+- Add code to split comparison field entries
+- Adapt code to new directory structure in github repository
+- change "recreated_templates" to "standardized_curations" in output file names
+- Rename submission id variables in code and standardized files for clarity
+-- subm_obs_id -> sig_subm_id, uniq_obs_id -> sig_row_id
+- Revise messages in code for clarity
+- Separate writing tab-delimited and csv versions of standardized submission files to different, specifiable directories
+- fix problem with logging using log_no_valid_symbol_vs_pmid()
+
 Changes in version 1.3.0
 - Support new exposure type: infection (COVID-19 studies)
 - For subject type "cell_subset", use cell ontology ids instead of display names.
