--- a/changelog.txt
+++ b/changelog.txt
@@ -1,16 +1,16 @@
 HIPC Dashboard Pipeline
 
-Changes in version 1.3.1
-- Add splitting on comparison field entries (split 5)
+Changes in version 1.4.0
 - Add splitting on tissue_type_term_id (split 4).
 -- Split tissue_type_term_ids get individual columns in Dashboard submission files
+- Add splitting on comparison field entries (split 5)
 - Adapt code to new directory structure in github repository
 - change "recreated_templates" to "standardized_curations" in output file names
 - Rename submission id variables in code and standardized files for clarity
 -- subm_obs_id -> sig_subm_id, uniq_obs_id -> sig_row_id
 - Revise messages in code for clarity
 - Separate writing tab-delimited and csv versions of standardized submission files to different, specifiable directories
-- fix problem with logging using log_no_valid_symbol_vs_pmid()
+- Fix problem with logging using log_no_valid_symbol_vs_pmid()
 - "pmid:" tags now removed immediately
 
 Changes in version 1.3.0
